--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
   "name": "azfuncplay",
   "version": "1.0.0",
-  "description": "Azure Functions sample for the Serverless framework",
+  "description": "",
   "scripts": {
-    "test": "echo \"No tests yet...\"",
-    "start": "func host start"
+    "start": "func start",
+    "test": "echo \"No tests yet...\""
   },
-  "keywords": [
-    "azure",
-    "serverless"
-  ],
   "dependencies": {},
-  "devDependencies": {
-    "serverless-azure-functions": "^1.0.0"
-  }
+  "devDependencies": {}
 }
