--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "azfuncplay",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
